# RAG_project

./: .gitignore  .python-version  DEPLOYMENT_FIXES.md  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  requirements.txt  streamlit.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/1d3deb21-0c66-4949-a394-2ba90f44340d/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/606e31cb-5ee2-45b4-b510-28e604d2b67d/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/90fe87b5-6bc8-4ca6-816b-c1d979282947/: mutable_id_tracker.mappings
rag.egg-info/: PKG-INFO  requires.txt
