[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "inngest>=0.4.8",
    "llama-index-readers-file>=0.4.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.0",
    "streamlit>=1.41.0",
    "uvicorn>=0.34.0",
]
